--- a/index.html
+++ b/index.html
@@ -64,12 +64,13 @@
 
 <section class="reveal" id="contact">
   <h2>Contact Us</h2>
-  <form>
+  <form id="contactForm">
     <input placeholder="Your Name" />
     <input placeholder="Your Email" />
     <textarea placeholder="Your Message"></textarea>
     <button type="submit">Send</button>
   </form>
+  <div id="formMessage" style="display:none; margin-top: 20px; color: #4CAF50; font-weight: bold; text-align: center;">✓ Form submitted successfully!</div>
 </section>
 
 <footer>
